--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,86 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-  }
+    "cfb-stories": {
+      "projectType": "library",
+      "root": "projects/cfb-stories",
+      "sourceRoot": "projects/cfb-stories/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/cfb-stories/tsconfig.lib.json",
+            "project": "projects/cfb-stories/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/cfb-stories/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/cfb-stories/src/test.ts",
+            "tsConfig": "projects/cfb-stories/tsconfig.spec.json",
+            "karmaConfig": "projects/cfb-stories/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/cfb-stories/tsconfig.lib.json",
+              "projects/cfb-stories/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "adv-stories": {
+      "projectType": "library",
+      "root": "projects/adv-stories",
+      "sourceRoot": "projects/adv-stories/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/adv-stories/tsconfig.lib.json",
+            "project": "projects/adv-stories/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/adv-stories/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/adv-stories/src/test.ts",
+            "tsConfig": "projects/adv-stories/tsconfig.spec.json",
+            "karmaConfig": "projects/adv-stories/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/adv-stories/tsconfig.lib.json",
+              "projects/adv-stories/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "cfb-stories"
 }
